[package]
name = "flyio-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde = { version = "1", features = ["derive"]}
serde_json = "1"
derivative = "2"
derive_more = "0.99"


eyre = "0.6.8"
smol_str = { version = "0.1", features = ["serde"] }
serde_nanos = "0.1.3"
rand = "0.8.5"
tokio = { version = "1.27.0", features = ["full"] }
parking_lot = "0.12.1"
futures = "0.3"

# tracing
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "parking_lot"] }
tracing-appender = "0.2"
tracing-opentelemetry = "0.18.0"
opentelemetry = { version = "0.18.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.11.0" }
