[package]
name = "flyio-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde = { version = "1", features = ["derive"]}
serde_json = "1"
serde_nanos = "0.1.3"
serde_repr = "0.1"
derivative = "2"
derive_more = "0.99"


eyre = "0.6.8"
smol_str = { version = "0.1", features = ["serde"] }
rand = "0.8.5"
tokio = { version = "1.27.0", features = ["full"] }
parking_lot = "0.12.1"
futures = "0.3"
fnv = "1.0.7"
dashmap = "5.4.0"
vclock = { version = "0.4.3", features = ["serde"] }

# tracing
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "parking_lot"] }
tracing-appender = "0.2"
tracing-opentelemetry = "0.18.0"
opentelemetry = { version = "0.18.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.11.0" }


[[bin]]
name = "kafka"
path = "src/bin/kafka/mod.rs"

[[bin]]
name = "txn-rw"
path = "src/bin/txn-rw/mod.rs"
